examples/test/testpolicy7451.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7451
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key39: value40
      key8: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value40
      podSelector:
        matchLabels:
          key15: value0
          key40: value30
